--- a/Day14/requirements.txt
+++ b/Day14/requirements.txt
@@ -1,6 +1,7 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
 transformers==4.35.2
 torch==2.5.0
-pydantic==2.5.0
-python-multipart==0.0.6
+fastapi>=0.95.0,<1.0
+uvicorn[standard]>=0.18.0,<0.23.0
+requests>=2.31.0
+pydantic>=2.5.1,<3.0.0
+python-multipart>=0.0.6
